# explorer

./: .gitmodules  .rustfmt.toml  AGENTS.md  Cargo.toml  flake.nix
.cargo/: config.toml  rustc-wrapper.sh
crates/r3bl-rmux/: Cargo.toml
crates/r3bl-rmux/src/: driver.rs  lib.rs  state.rs  theme.rs  to_offscreen_buffer.rs
docs/superpowers/plans/: 2026-06-12-resizable-pane-stack.md
docs/superpowers/specs/: 2026-06-12-resizable-pane-stack-design.md
patches/r3bl_tui-0.7.8/: force-crossterm-backend.patch
src/: cli.rs  config.rs  loader.rs  lsp.rs  main.rs  session.rs  supervisor.rs  watcher.rs
src/tui/: app.rs  file_list.rs  file_name_picker.rs  fuzzy_picker.rs  input_line.rs  mod.rs  pane_component.rs  pane_manager.rs  panes_renderer.rs  preview.rs  rmux_bridge.rs  state.rs  terminal_pane.rs  theme.rs  theme_picker.rs  title_row.rs
themes/: themes.rs
xtask/: Cargo.toml
xtask/src/: main.rs  update_themes.rs
