[package]
name = "explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1"
jwalk = "0.8"
lsp-types = { version = "0.97", features = ["proposed"] }
nucleo = "0.5"
pico-args = "0.5"
r3bl_tui = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-core = "0.1"

[patch.crates-io]
r3bl_tui = { path = "../r3bl-open-core/tui" }
