[workspace]
members = [".", "xtask"]
default-members = ["."]

[package]
name = "explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1"
camino = "1"
jwalk = "0.8"
libc = "0.2"
miette = "7"
notify = "8"
lsp-types = { version = "0.97", features = ["proposed"] }
nucleo = "0.5"
pico-args = "0.5"
r3bl_tui = { path = "vendor/r3bl-open-core/tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kdl = "6"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-core = "0.1"
unicode-segmentation = "1"
url = "2"

[patch.crates-io]
# incremental = false  # Disable to avoid rustc dep graph ICE on nightly

# Temporary patch: proc-macro2 1.0.106 is broken with nightly-2026-02-15
# (missing #![feature(proc_macro_span)] in main crate compilation).
# Remove before merge once a fixed release is published.
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2" }

[workspace.lints]

[profile.release-with-debug]
inherits = "release"
debug-assertions = true
